# SCyTHE

./: Cargo.toml  README.md
scythe/: Cargo.toml  README.md
scythe-image/: Cargo.toml  README.md
scythe-image/src/: lib.rs
scythe/src/: canvas.rs  clip.rs  drawable.rs  lib.rs  pattern.rs
scythic/: Cargo.toml  README.md
scythic/src/: lib.rs  softbuffer.rs
scythic/src/gl/: mod.rs
